# bootleby

./: Cargo.toml  README.mkdn  build.rs  link.x.in  memory.x  renovate.json  rust-toolchain.toml
.cargo/: config
.github/workflows/: build.yml  formatting.yml  release-build.yml
src/: bsp.rs  lib.rs  main.rs  romapi.rs  sha256.rs
src/bsp/: gimlet.rs  lpc55xpresso.rs  oxide_rot_1.rs  rot_carrier.rs
tinycrc/: Cargo.toml  README.mkdn
tinycrc/src/: lib.rs
xtask/: Cargo.toml  build.rs
xtask/src/: main.rs
