[package]
name = "stage0"
version = "0.1.0"
edition = "2021"

[features]
# We select default features here purely for rust-analyzer.
default = ["target-board-rot-carrier"]

target-board-lpc55xpresso = []
target-board-rot-carrier = []
target-board-gimlet = []

allow-unsigned-images = []

[dependencies]
cfg-if = "1.0.0"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
crc = { version = "3.0.1", default-features = false }
crc-catalog = "2.2.0"
hex-literal = "0.4.1"
lpc55-pac = { version = "0.5.0", features = ["rt"] }
num-derive = { version = "0.3.3", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
static_assertions = "1.1.0"
tinycrc = {path = "tinycrc"}
zerocopy = { version = "0.6.1", default-features = false }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
debug = true

[lib]
name = "stage0"
test = false
bench = false

[[bin]]
name = "stage0"
test = false
bench = false

[[bin]]
name = "sha_tests"
test = false
bench = false

[workspace]
members = [
    "tinycrc",
]
