[package]
name = "xtask"
version = "1.0.0"
edition = "2018"

[dependencies]
hubtools = { git = "https://github.com/oxidecomputer/hubtools", default-features = false, version = "0.4.6" }
clap = { version = "4", default-features = false, features = ["std", "derive", "default", "wrap_help"] }
anyhow = { version = "1", default-features = false, features = ["std", "backtrace"] }

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
